--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "stderr"
   ],
   "devDependencies": {
+    "bluebird": "^2.9.34",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "mocha": "^2.2.5",
-    "nodemon": "^1.4.0"
+    "nodemon": "^1.4.0",
+    "require-new": "^1.0.2"
   }
 }
