--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.13.0",
-    "eslint-config-standard": "^16.0.1",
+    "eslint-config-raine": "^0.1.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^30.7.7",
