--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^7.13.0",
-    "eslint-config-raine": "^0.1.0",
+    "eslint-config-raine": "^0.1.1",
+    "eslint-config-standard": "^16.0.1",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.7.7",
+    "eslint-plugin-jsdoc": "^30.7.8",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.2",
+    "eslint-plugin-standard": "^4.1.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
     "require-new": "^1.1.0"
