--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
     "require-new": "^1.1.0"
+  },
+  "dependencies": {
+    "cross-spawn": "^7.0.3"
   }
 }
