--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-standard": "^4.1.0",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
     "require-new": "^1.1.0"
   },
   "dependencies": {
