--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - master
-      - "!dependabot/**"
+      - '!dependabot/**'
   pull_request:
     branches:
-      - "**"
+      - '**'
 
 env:
   CI: true
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [10, 12, 14]
+        node: [14, 16, 18]
         os: [ubuntu-latest]
 
     steps:
